# doaj

./: .env.example  .gitignore  LICENSE  LICENSE-CODE.md  LICENSE-CONTENT.md  README.md  pyproject.toml
.github/workflows/: backup-repository.yml  ci.yml  deploy-pages.yml  fetch-journals.yml
config/: schema.toml
data/: README.md
data/metrics/: sample.json
docs/: index.html
docs/data/: aggregates.json  journals.json  meta.json  scimagojr.csv  sjr.json
ml/: README.md
scripts/: api.sh  fetch_journals.py  ingest.sh  serve.sh
src/doaj/: __init__.py  api.py  config.py  ingest.py  main.py  metrics.py  sources.py
tests/: test_smoke.py
web/: app.js  index.html  styles.css
